Resize mobile navbar links and button

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -75,15 +75,17 @@
 
     .links {
         display: flex;
-        gap: 12px;
+        width: 100%;
+        justify-content: space-between;
+        gap: 0;
     }
 
     .link {
-        font-size: 11px;
+        font-size: 10px;
     }
 
     .buyBtn {
-        padding: 4px 10px;
+        padding: 3px 10px;
         font-size: 10px;
     }
 
@@ -92,7 +94,7 @@
     }
 
     .logo {
-        font-size: 1.1rem;
+        display: none;
     }
 }
 
