--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -75,9 +75,8 @@
 
     .links {
         display: flex;
-        width: 100%;
-        justify-content: space-between;
-        gap: 0;
+        gap: 10px;
+        width: auto;
     }
 
     .link {
@@ -94,7 +93,8 @@
     }
 
     .logo {
-        display: none;
+        display: block;
+        font-size: 1.1rem;
     }
 }
 
