--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -31,6 +31,7 @@
     -webkit-text-fill-color: transparent;
     z-index: 20;
     letter-spacing: 0.02em;
+    will-change: transform, opacity;
 }
 
 .title {
@@ -46,6 +47,7 @@
     text-align: center;
     letter-spacing: -0.04em;
     filter: drop-shadow(0 30px 60px rgb(0, 0, 0));
+    will-change: transform, opacity;
 }
 
 .titleNumber {
@@ -71,6 +73,7 @@
     width: auto;
     object-fit: contain;
     mix-blend-mode: screen;
+    will-change: transform, opacity;
 }
 
 .podLeft {
@@ -91,6 +94,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     z-index: 30;
+    will-change: transform, opacity;
 }
 
 .scrollingText {
