--- a/src/app/buy/buy.module.css
+++ b/src/app/buy/buy.module.css
@@ -198,6 +198,12 @@
         text-align: center;
     }
 
+    .newLabel {
+        text-align: center;
+        display: block;
+        width: 100%;
+    }
+
     .price {
         text-align: center;
         margin-bottom: 20px;
